# radfield3d-nn

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md  pyproject.toml  requirements.txt  rfhelpers.py  rftypes.py  run_network_task.py  setup.py
.github/actions/build-deploy/: action.yml
.github/workflows/: build.yml  release.yml  tests.yml
augmentations/: augmentation_limit.py  importance_sampling.py  noise.py  smooth_spectra.py  smoothing.py
callbacks/: checkpoint.py  debug_probe.py  ema.py  metrics_plotter.py  package_export.py  plotter.py  validate_gt.py  warmup_early_stopping.py
datasets/: __init__.py  channel_join.py  crop_dataset.py  dataloader.py  voxelwise.py
encodings/: hash_encoding.py  spherical_hamonics.py
include/radfield3d-nn/: device_export.h  device_radiation_field.h  field_predictors.h  model_domain.h  model_io.h  msvc_float16_shim.hpp
include/radfield3d-nn-bindings/: bridge.inl  utils.h
include/radfield3d-nn/tcnn/: base_model.h  combined_model.h  helper_kernels.cuh
include/radfield3d-nn/tcnn/blocks/: mlp_select.h
include/radfield3d-nn/tcnn/encodings/: beam_encoder.h  global_parameters.h  location_encoding.h  sperf_beam_encoder.h
include/radfield3d-nn/tcnn/layers/: beam_fusion.h  film.h  gated_fusion.h  layer_norm.h  linear.h
include/radfield3d-nn/tcnn/utils/: histogram_resample.h
include/radfield3d-nn/vk/: cuda_vulkan_export.h  vulkan_field.h
layers/: __init__.py  film.py  gates.py  historam_layers.py
loggers/: logger.py  mlflow.py  wandb.py
losses/: __init__.py  base.py  combinations.py  gradients.py  std.py
metrics/: airkerma_accuracy.py  base.py  gpr.py  log_rmse.py  ncc.py  psnr.py  smape.py  ssim.py  types.py
models/: __init__.py  base.py  cnn.py  feedforward.py  nerf.py
models/encoders/: sinusoidal_encoding.py  spectra_encoder.py
normalizations/: __init__.py  asinh.py  base.py  beam_parameters.py  linear.py  lognormalizer.py  special_fits.py
pre-trained-models/: B2S-DS01.json  B2S-DS02.json  B2S-DS03.json  PBRF.json  PBRF.pt  SPERFNet.json  SPERFNet.pt  SRBFNet.json  SRBFNet.pt
preprocessing/: airkerma.py
radfield3dnn/: __init__.py  rfhelpers.py  rftypes.py  roi.py
radfield3dnn/activations/: HistogramNormalize.py  flux_activations.py
radfield3dnn/datasets/: __init__.py  channel_join.py  channel_join_spectra.py  channel_split_relative.py  crop_dataset.py  dataloader.py  mc_floor_cut.py  prefetcher.py  ram_cache.py  voxelwise.py
radfield3dnn/deploy/: __init__.py  __init__.pyi  model_packager.py  onnx_runtime.py
radfield3dnn/encodings/: base.py  sinusoidal_encoding.py
radfield3dnn/losses/: __init__.py  base.py  combinations.py  std.py
radfield3dnn/losses/mtl/: mtl.py
radfield3dnn/metrics/: __init__.py  airkerma_accuracy.py  base.py  factory.py  gpr.py  histogram_accuracy.py  log_rmse.py  ncc.py  psnr.py  smape.py  ssim.py  types.py
radfield3dnn/models/: __init__.py  autoencoder.py  base.py  cnn.py  feedforward.py  field_unet.py  hdr_net.py  mlp.py  nerf.py  nerf_cpp.py  twohead_hdr.py  xattn_siren.py
radfield3dnn/models/activations/: HistogramNormalize.py  flux_activations.py
radfield3dnn/models/encoders/: factory.py  rff_encoding.py  sinusoidal_encoding.py  spectra_encoder.py  spectra_factory.py  spherical_hamonics.py
radfield3dnn/models/layers/: __init__.py  analytic_direct.py  scatter_scale.py
radfield3dnn/models/layers/fusions/: __init__.py  attention.py  base.py  concat.py  film.py  gates.py
radfield3dnn/normalizations/: __init__.py  base.py  beam_parameters.py
radfield3dnn/optim/: __init__.py  base.py  cosine_warmup.py
radfield3dnn/preprocessing/: airkerma.py  analytic_direct_beam.py
radfield3dnn/preprocessing/augmentations/: augmentation_limit.py  importance_sampling.py  noise.py  roi_sampling.py  smooth_spectra.py  smoothing.py  transformations.py
radfield3dnn/preprocessing/normalizations/: __init__.py  asinh.py  base.py  beam_parameters.py  linear.py  logscale.py
radfield3dnn/utils/: mean_sampling.py
radfield3dnn/visualizers/: sliced_plotter.py
shaders/: airkerma_combine.comp  voxel_visibility.comp
src/: binding_utils.cu  python_api.cu
src/RadField3DNN/: device_radiation_field.cpp  field_predictors.cpp  model_io.cpp  python_deploy_api.cpp
src/RadField3DNN/tcnn/: combined_model.cu  linear.cu  model_io.cu
src/RadField3DNN/tcnn/encodings/: beam_encoder.cu  global_parameters.cu  location_encoding.cu  sperf_beam_encoder.cu
src/RadField3DNN/tcnn/layers/: beam_fusion.cu  film.cu  gated_fusion.cu  layer_norm.cu
src/RadField3DNN/tcnn/models/: base_model.cu
src/RadField3DNN/tcnn/utils/: histogram_resample.cu
src/RadField3DNN/vk/: cuda_vulkan_export.cpp  vulkan_field.cpp
tasks/: base.py  train.py  tune.py
tests/: test_accelerator_speed.py  test_and_repair_dataset.py  test_asinh_normalizer.py  test_channel_eval_dispatch.py  test_channels_split_relative.py  test_cnn_construction.py  test_dataloader.py  test_floor_mask_pipeline.py  test_fusion_influence.py  test_histogram_accuracy.py  test_loading_speed.py  test_logscale_normalizer.py  test_memory.py  test_metric_loss_alignment.py  test_model.py  test_nn.py  test_normalizers.py  test_pbrfnet_cpp.py  test_pbrfnet_learnability.py  test_prefetcher.py  test_roi_sampling.py  test_spherical_harmonics.py  test_split_loss_weighting.py
tests/cxx/: dump_model_inputs.cpp  probe_vulkan_interop.cpp  test_cuda_device_inference.cpp  test_model_io.cpp  test_network.cu  test_torch.cu  test_vulkan_export.cpp
tests/deploy/: test_rf3m_metadata_roundtrip.py
tools/: analyze_dataset.py  check_dataset.py  convert_dataset.py  dataset_tester.py  evaluate_hyperparameters.py  filter_dataset.py  plot_geometries.py  prepare_dataset.py  render_from_model.py  repair_dataset.py
typings/: rfnn_deploy.pyi
utils/: mean_sampling.py
utils/samplings/: uniform_sampling.py
utils/visualizers/: sliced_plotter.py  volumetric_plotter.py
visualizers/: sliced_plotter.py  spectrum_plotter.py  volumetric_plotter.py
